--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://amirtharaj-r.github.io/react-website-tasks/gre-page",
+  "homepage":"https://amirtharaj-r.github.io/react-website-tasks",
   "name": "gre-page",
   "version": "0.1.0",
   "private": true,
